notes and edits in model section

--- a/writing/Cubert/Cubert manuscript.v4.tex
+++ b/writing/Cubert/Cubert manuscript.v4.tex
@@ -1015,12 +1015,20 @@ $L_{1}$ tracks  $S_{1}$'s epistemic state, and therefore knows whether the speak
 
 %\ndg{something about fitting $P(c)$...}
 
-\ndg{i don't get the next two paragraphs: we're not doing any collapsing here now, right? shouldn't this just read something like ``we fit the variance of $P(c)$ for each predicate and each arrangement condition, we additionally assume total-only knowledge for heavy in move conditions but not other cases. the best fit variance values are blah. the results are compared to expt 3 collective endorsements in fig blah. we see blah.''??}
+%\ndg{i don't get the next two paragraphs: we're not doing any collapsing here now, right? shouldn't this just read something like ``we fit the variance of $P(c)$ for each predicate and each arrangement condition, we additionally assume total-only knowledge for heavy in move conditions but not other cases. the best fit variance values are blah. the results are compared to expt 3 collective endorsements in fig blah. we see blah.''??}
 
-To evaluate the quantitative predictions of our model, we fit the variance of $P(c)$ for each predicate and each arrangement condition (i.e., \texttt{regular} vs.~\texttt{random}); we additionally assume sum-only knowledge for \emph{heavy} in ``move'' conditions, but not other cases. The best fit variance values are as follows: \emph{heavy} \texttt{regular}/\texttt{random}: $\sigma=0.7$; \emph{big}/\emph{tall} \texttt{random}: $\sigma=3$; \emph{big} \texttt{regular}: $\sigma=1$; \emph{tall} \texttt{regular}: $\sigma=0.1$. The model predictions are compared to collective endorsement ratings from Expt.~3 in Fig.~\ref{fit-model}. \gcs{TBD: utterance cost differences}
-In addition to the match between the qualitative predictions of our model and the human data from Expt.~3, fitting predicate-specific parameters for contextual noise yields near exact \emph{quantitative} predictions as well. Put simply, our model of plural predication, which explicates the ways that speakers and listeners reason about each other as they communicate, succeeds. %Collective interpretations become more likely as the properties they name become more predictable in context.
+To compare our model to the data from Expt.~3, we fit the variance of $P(c)$ for each predicate and each arrangement condition (i.e., \texttt{regular} vs.~\texttt{random}). For \emph{heavy} in the ``move'' condition, we assume access to knowledge of only the sum of weights (not the individual weights); full knowledge is assumed for other predicates.
+sum-only knowledge for \emph{heavy} in ``move'' conditions, but not other cases. The best fit variance values are as follows: \emph{heavy} \texttt{regular}/\texttt{random}: $\sigma=0.7$; \emph{big}/\emph{tall} \texttt{random}: $\sigma=3$; \emph{big} \texttt{regular}: $\sigma=1$; \emph{tall} \texttt{regular}: $\sigma=0.1$. 
+\ndg{how are these fit? there are suspicious coincidences if they are actually fully fit.} 
+\ndg{note the model is way over-parametrized to the data.... we should re-think what we claim.}
+The model predictions are compared to collective endorsement ratings from Expt.~3 in Fig.~\ref{fit-model}. \gcs{TBD: utterance cost differences}
+We see a good match between model and data.
+This suggests that our formal approach is indeed able to predict the pattern of data observed (and this qualitative pattern holds for a range of parameter settings). 
+Of course with so many fit parameters we would not want to claim that the model uniquely, quantitatively predicts the data: future work will need to experimentally measure the appropriate noise values and do parametric manipulations of the conditions.
 
-\ndg{some caveat about what the model is doing (formalizing the pragmatic theory, accommodating the data) and not doing (predicting the quantitative details of the data).} \gcs{I'm not sure I understand what you want here. We should talk about this.}
+%In addition to the match between the qualitative predictions of our model and the human data from Expt.~3, fitting predicate-specific parameters for contextual noise yields near exact \emph{quantitative} predictions as well. Put simply, our model of plural predication, which explicates the ways that speakers and listeners reason about each other as they communicate, succeeds. 
+%%Collective interpretations become more likely as the properties they name become more predictable in context.
+%\ndg{some caveat about what the model is doing (formalizing the pragmatic theory, accommodating the data) and not doing (predicting the quantitative details of the data).} \gcs{I'm not sure I understand what you want here. We should talk about this.}
 
 %To quantitatively evaluate the role of speaker knowledge, we collapse over the contextual predictability manipulation and look only at judgments for plural predications with \emph{heavy} (the knowledge manipulation had no measurable affect on \emph{tall} or \emph{big}). %Here we fit only the specific values for noise in the model; all other parameters remain unchanged. 
 %With \emph{heavy}-specific values for $P(c)$ ($\sigma=0.7$; all other parameters remain unchanged) we generate the model predictions in Fig.~\ref{fit-model}, plotted with average collective endorsement ratings for \emph{heavy} from Expt.~3. By simply assuming that the collective interpretations of \emph{heavy} have \emph{heavy}-specific values for noise in context, we achieve a near exact fit between the model and the human data it predicts.
