--- a/writing/Cubert/Cubert manuscript.v4.tex
+++ b/writing/Cubert/Cubert manuscript.v4.tex
@@ -605,8 +605,6 @@ Finally, \emph{heavy}; here, \emph{bags} received the highest collective endorse
 
 \subsubsection{Discussion}
 
-\ndg{to edit...}
-
 We have extended our paraphrase methodology beyond a simple reference task, using naturally-occurring examples of plural predications.
 % Our goals here were modest: to understand better the terrain of interpretation preferences for plural predications, without special attention to particular classes of predicates or subjects. Participants demonstrated full use of the paraphrase endorsement rating scales provided. Moreover, 
 The pattern of ratings sheds some light on the status of stubborn distributivity. Perhaps most striking is the absence of clear groupings of predicates in the results of Expt.~2a: one would be hard-pressed to read stubborn distributivity (or complaisant collectivity) off the gradient of ratings in Fig.~\ref{sentence-coll}.
@@ -630,7 +628,7 @@ Narrowing our focus to the predicates \emph{big}, \emph{heavy}, and \emph{tall} 
 By comparing specific subject nouns within predicates, we begin to find evidence for the context-dependent nature of these predications. With \emph{big}, four out of the five subject nouns strongly resisted collective interpretations. However, with \emph{waves}, participants much more readily endorsed collective paraphrases. As was the case with \emph{small numbers} in Expt.~2a. Several interpretations of this finding are possible; one is that limiting the noise of a collective interpretation---by reducing the variability in the physical instantiation of the subject---increases the rates of that interpretation. We follow up on this hypothesis with a direct manipulation of predictability in Expt.~3.
 
 %<<<<<<< Updated upstream
-Finally, with \emph{heavy}, we found that different subject nouns yielded different rates of collective interpretations. At first blush, these differences appear to track the probability that a speaker would have access to the information necessary to verify a distributive interpretation. Lids and bags are probably picked up together, certainly more so than loads or men. 
+With \emph{heavy}, we also found that different subject nouns yielded different rates of collective interpretations. At first blush, these differences appear to track the probability that a speaker would have access to the information necessary to verify a distributive interpretation. Lids and bags are probably picked up together, certainly more so than loads or men. 
 If speakers experience only the collective weight of a plurality, not the individual weights of the members, they lack knowledge which would license the distributive meaning. 
 If listeners are aware of this, then the alternative, collective reading becomes more likely for collections (such as lids) that are likely to be lifted together.
 %Without experiencing the collective weight of a plurality (e.g., of many loads), speakers lack knowledge about whether or not a collective interpretation would be true (e.g., what the total weight of the loads was); without this knowledge, the interpretation becomes less likely, and as a result its alternative, the distributive interpretation, becomes more likely. 
@@ -767,10 +765,10 @@ We will base our analysis on the Rational Speech-Acts (RSA) approach \citep{fran
 
 %Using Bayesian inference, the listener determines what the state of the world is likely to be given that a speaker produced some utterance, knowing that the speaker is reasoning about how a listener is most likely to interpret that utterance. Thus, we have at least three levels of inference. At the top, the sophisticated, pragmatic listener, \emph{L}$_{1}$, reasons about the pragmatic speaker, \emph{S}$_{1}$, and infers the state of the world \emph{s} given that the speaker chose to produce the utterance \emph{u}. The speaker chooses \emph{u} by maximizing the probability that a naive, literal listener, \emph{L}$_{0}$, would correctly infer the state of the world \emph{s} given the literal meaning of \emph{u}.
 
-In several recent RSA models, the pragmatic listener is extended to reason over factors needed to fix meaning, in addition to the sentence itself. 
-That is, some aspect of the literal interpretation model is ``lifted'' into the inference performed by the \gcs{pragmatic?}parhatic reasoner.
+In several recent RSA models, the pragmatic listener is extended to reason over factors needed to fully fix meaning, in addition to the situation itself. 
+That is, some aspect of the literal interpretation model is ``lifted'' into the inference performed by the pragmatic reasoner.
 %In recent models, conversational participants reason not merely over utterances and meanings, but also over variables that contribute to those meanings. 
-This sort of lifted variable RSA model has proven useful in accounts of gradable adjective semantics (where the lifted variable is the adjective's degree threshold; \citealp{lassitergoodman2013}), specificity implicatures (where the lifted variable determines the choice of lexica; \citealp{bergenetal2012}), and non-literal meaning (where the lifted variable concerns the dimension along which the speaker intends to communicate, or the question under discussion; \citealp{kaoetal2014}), to name a few applications (see also \citealp{goodmanlassiter2015} for an overview). Our model treats the two underlying senses (collective and distributive) as vague expressions that have an underspecified threshold semantics---following \citealp{lassitergoodman2013}, we lift the corresponding threshold variables to be resolved by the pragmatic listener.
+This sort of lifted variable RSA model has proven useful in accounts of gradable adjective semantics (where the lifted variable is the adjective's degree threshold; \citealp{lassitergoodman2013}), specificity implicatures (where the lifted variable determines the choice of lexica; \citealp{bergenetal2012}), and non-literal meaning (where the lifted variable concerns the dimension along which the speaker intends to communicate, or the question under discussion; \citealp{kaoetal2014}); see also \citealp{goodmanlassiter2015} for an overview. Our model treats the two underlying senses (collective and distributive) as vague expressions that have an underspecified threshold semantics---following \citealp{lassitergoodman2013}, we lift the corresponding threshold variables to be resolved by the pragmatic listener.
 
 From \citealp{goodmanstuhlmuller2013}, we borrow a treatment of the speaker's knowledge. The speaker has a basic motivation to inform the listener about the true state of the world; he accounts for his uncertainty about this true state by choosing an utterance according to the \emph{expected informativity} given his belief distribution. The pragmatic listener knows this, but does not know what private observations the speaker has had---she takes this uncertainty into account when evaluating an utterance.
 
@@ -780,7 +778,7 @@ In the formal exposition that follows, we will be brief about the pre-existing m
 \subsection{The model}
 
 We take states of the world, $s\in S$, to consist of a collection of entities, each of which has some individual degree: for each $x\in s$, $d(s)\in \mathbb R$ is the relevant property.
-We assume a simple truth-functional literal semantics, wherein a plural predication utterance $u$ (e.g., \emph{the boxes are big})  denotes a mapping from states of the world to truth values.\footnote{We assume truth values are coerced to numbers where appropriate: \emph{true} is $1$ and \emph{false} is $0$.} We parameterize the truth function, $\sem{u}^{v,c,\theta_c,\theta_d}: S \rightarrow \text{Bool}$, so that it depends both on context, $c$, and on utterance interpretation, $v$, and two gradable thresholds, $\theta_c$ and $\theta_d$. 
+We assume a simple truth-functional literal semantics, wherein a plural predication utterance $u$ (e.g., \emph{the boxes are big})  denotes a mapping from states of the world to truth values.\footnote{We assume truth values are coerced to numbers where appropriate: \emph{true} is $1$ and \emph{false} is $0$.} We parameterize the truth function, $\sem{u}^{v,c,\theta_c,\theta_d}: S \rightarrow \text{Bool}$, so that it depends on context, $c$, on utterance interpretation, $v$, and on two gradable thresholds, $\theta_c$ and $\theta_d$. 
 We will consider three alternative utterances: 
 an {unambiguously distributive} (e.g., \emph{the boxes each are big}), an {unambiguously collective} (e.g., \emph{the boxes together are big}), and an {ambiguous} utterance (e.g., \emph{the boxes are big}).
 
@@ -815,10 +813,10 @@ The literal listener $L_{0}$ has prior uncertainty about the context, $P(c)$, an
 $$P_{L_{0}}(s|u,v,\theta_d,\theta_c) \propto \sem{u}^{v,c,\theta_d,\theta_c}(s) \cdot P(c) \cdot P(s)$$
 The distribution on collective-context, $P(c)$, will determine how predictable the collective property is compared to the distributive: higher entropy $P(c)$ will correspond to noisier collective interpretations.
 The other interpretation variables ($v$, $\theta_d$, $\theta_c$) are lifted, so that they will be actively reasoned about by the pragmatic listener. Put simply, the pragmatic listener resolves the interpretation of an ambiguous utterance and fixes the appropriate thresholds for vague gradable predicates.
-\ndg{should we say a word about why we choose to lift some but not all of the variables? what happens if we lift $c$???} \gcs{I wonder if it's worth getting into this here..}
+%\ndg{should we say a word about why we choose to lift some but not all of the variables? what happens if we lift $c$???} \gcs{I wonder if it's worth getting into this here..}
 %We could have the literal listener reason also about the utterance interpretation, $v$, but we choose instead to \emph{lift} it, so that pragmatic forces will affect it. 
 
-The speaker, $S_{1}$, chooses an utterance \emph{u} that would most effectively communicate some state \emph{s} to a literal listener \emph{L}$_{0}$.  In other words, the speaker's utility function $U_{S_{1}}$ minimizes the effort \emph{L}$_{0}$ would need to arrive at \emph{s} from \emph{u} (i.e., increasing utterance informativity by decreasing surprisal), all while being efficient at communicating (i.e., minimizing utterance cost, $C(u)$):
+The speaker, $S_{1}$, chooses an utterance \emph{u} that would most effectively communicate some state \emph{s} to a literal listener \emph{L}$_{0}$, increasing utterance informativity by decreasing surprisal.  In other words, the speaker's utility function $U_{S_{1}}$ minimizes the effort \emph{L}$_{0}$ would need to arrive at \emph{s} from \emph{u}, while being efficient (i.e., minimizing utterance cost, $C(u)$):
 $$U_{S_{1}}(u;s,v,\theta_d,\theta_c) = \textrm{log}(L_{0}(s|u,v,\theta_d,\theta_c)) - C(u)$$
 To capture the speaker's epistemic state, we follow \cite{goodmanstuhlmuller2013} by assuming the speaker has a private belief distribution about the state of the world, $P(s|o)$, that depends on some observations $o$ of the true world. 
 The speaker then selects an utterance $u$ to convey information about the likely state $s$ that generated the observation $o$:
@@ -947,11 +945,12 @@ The plural predication is both ambiguous ($v$) and vague ($\theta_{c}$, $\theta_
 
 %\ndg{what is the list of all parameters fit? $P(v)$, $C(u)$... anything else? do these results still use only two values of the degrees (3 and 4)? which $P(c)$ is used for these predictions? is it fit to the data?}
 
-To generate predictions, we need to fix various parameter settings within the model; we aim to make the simplest choices possible, focussing on qualitative predictions.\footnote{The full model is viewable online at \url{http://forestdb.org/models/plural-predication.html}.}
+To generate predictions, we need to fix various parameter settings within the model; we aim to make the simplest choices possible, focussing on qualitative predictions.\footnote{The full model is viewable online at \url{http://forestdb.org/models/plural-predication.html}. \ndg{note: update code to most clearly reflect final model description.}}
 %Here we fill in more details of these settings, with the caveat that the qualitative model results presented below are robust to a broad range of parameter settings; the specific values we give here are used merely to demonstrate the general behavior and success of the model.\footnote{XXX specifics about the range of parameter settings that are possible, and the settings that are not.\label{parameter}}
-Each state, $s$, consists of two objects, each of which has degree $3$ or $4$. The prior on states $P(s)$ was taken to be uniform. The distributive threshold $\theta_d$ ranged over the object degrees, and was drawn uniformly from the set of objects; the collective threshold $\theta_c$ ranged over state degrees (i.e., 6, 7 8), and was drawn uniformly from the state prior.
+Each state, $s$, consists of two objects, each of which has degree $3$ or $4$. The prior on states $P(s)$ was taken to be uniform. The distributive threshold $\theta_d$ was uniformly $3$ or $4$ (the two possible object degrees). The collective threshold $\theta_c$ was uniformly drawn from the possible total degrees, $\{6,7,8\}$. \ndg{should really be uniform, not state prior.}
+%ranged over state degrees (i.e., 6, 7 8), and was drawn uniformly from the state prior.
 %The priors on state $P(s)$ and on thresholds $P(\theta_d,\theta_c)$ are taken to be uniform. \ndg{check}
-We take $P(v)$ to be Bernoulli with a single free parameter (i.e., the prior bias toward collective interpretations); this parameter was fit to $0.9$ based on our experimental data.
+We take $P(v)$ to be Bernoulli with a single free parameter (i.e., the prior bias toward collective interpretations); this parameter was set to $0.9$ based on our experimental data.
 We take the cost $C(u)$ to be $1$ for the ambiguous utterance and $2$ for both of the unambiguous utterances---a reasonable assumption from the point of view of production, given that unambiguous utterances contain an extra word (i.e., \emph{each} or \emph{together}). The parameter $\alpha > 0$ controls the speaker's optimality; we fit $\alpha$ to $10$ based on our experimental data.
 Importantly, the qualitative patterns reported below are robust to changes in these parameters and assumptions.
 
@@ -1012,9 +1011,9 @@ In Fig.~\ref{modelresults}, we plot the probability that the interpretation-reso
 %%\subsection{Model predictions}
 
 
-The qualitative predictions of our plural predication model match the hypotheses and experimental results that motivated the model. Most striking is the monotonic decrease in probability of collective interpretations as collective noise increases. We now have a formal understanding as to why this effect holds: the noisier the collective interpretation, the less likely the listener $L_{0}$ is to correctly resolve the question under discussion, namely the properties of the named boxes $s$. Given that the speaker $S_{1}$'s goal is to successfully communicate $s$ to $L_{0}$, the noisier an interpretation, the less useful it is at achieving this goal; the speaker is therefore less likely to intend this interpretation, and as a result the pragmatic listener $L_{1}$ is less likely to infer it.
+The qualitative predictions of our plural predication model match the hypotheses and experimental results that motivated the model. Most striking is the monotonic decrease in probability of collective interpretations as collective noise increases (red bars in  Fig.~\ref{modelresults}). We now have a formal understanding as to why this effect holds: the noisier the collective interpretation, the less likely the listener $L_{0}$ is to correctly resolve the question under discussion, namely the properties of the named boxes $s$. Given that the speaker $S_{1}$'s goal is to successfully communicate $s$ to $L_{0}$, the noisier an interpretation, the less useful it is at achieving this goal; the speaker is therefore less likely to intend this interpretation, and as a result the pragmatic listener $L_{1}$ is less likely to infer it.
 
-The model also successfully predicts the qualitative increase in the probability of a collective interpretation when the speaker's  access to individual object properties is limited. %With only partial access to the actual state $s$, $S_{1}$ is less likely to have precise information concerning $s$ about which to communicate. 
+The model also successfully predicts the qualitative increase in the probability of a collective interpretation when the speaker's  access to individual object properties is limited (blue vs.~red bars in  Fig.~\ref{modelresults}). %With only partial access to the actual state $s$, $S_{1}$ is less likely to have precise information concerning $s$ about which to communicate. 
 $L_{1}$ tracks  $S_{1}$'s epistemic state, and therefore knows whether the speaker has full or partial knowledge. In the case of partial knowledge, a distributive interpretation lacks epistemic support, and therefore becomes less likely; as a result, collective interpretations become more likely.
 
 %We have verified the qualitative predictions of our account of plural predication: increasing the contextual predictability of collective properties (by decreasing contextual noise) increases the probability of collective interpretations; and, regardless of the amount of contextual noise, removing support for a distributive interpretation (by limiting the speaker's access to individual properties) decreases the probability of a distributive interpretation and thus increases the probability of a collective interpretation. Crucially, both of these qualitative predictions are borne out while making minimal assumptions concerning model parameters. Next, we fit these parameters to the human data collected in Expt.~3 to test both qualitative and \emph{quantitative} predictions of the model.
@@ -1033,7 +1032,7 @@ sum-only knowledge for \emph{heavy} in ``move'' conditions, but not other cases.
 The model predictions are compared to collective endorsement ratings from Expt.~3 in Fig.~\ref{fit-model}. \gcs{TBD: utterance cost differences}
 We see a good match between model and data.
 This suggests that our formal approach is indeed able to predict the pattern of data observed (and this qualitative pattern holds for a range of parameter settings). 
-Of course with so many fit parameters we would not want to claim that the model uniquely, quantitatively predicts the data: future work will need to experimentally measure the appropriate noise values and do parametric manipulations of the conditions.
+Of course with so many free parameters we would not want to claim that the model uniquely, quantitatively predicts the data: future work will need to experimentally measure the appropriate noise values and do parametric manipulations of the conditions.
 
 %In addition to the match between the qualitative predictions of our model and the human data from Expt.~3, fitting predicate-specific parameters for contextual noise yields near exact \emph{quantitative} predictions as well. Put simply, our model of plural predication, which explicates the ways that speakers and listeners reason about each other as they communicate, succeeds. 
 %%Collective interpretations become more likely as the properties they name become more predictable in context.
