--- a/writing/Cubert/Cubert manuscript.v4.tex
+++ b/writing/Cubert/Cubert manuscript.v4.tex
@@ -1090,9 +1090,9 @@ In section \ref{model}, we formalized our hypotheses with a computational model 
 
 Recall that current theories of stubborn distributivity describe it as a constraint on the sort of subjects certain predicates may compose with. 
 %Specifically, stubbornly distributive predicates refuse pluralities from their basic denotations. 
-Given the prohibition on plural subjects in their basic denotations, stubbornly distributive predicates simply cannot deliver collective interpretations. At the very least, the results of our experiments demonstrate that stubborn distributivity should not (indeed, cannot) manifest in terms of an all-out prohibition against collective interpretations. Even unabashedly stubbornly distributive predicates like \emph{big} yield greater rates of collective interpretations when context supports them. We claim it is the way that context supports collective interpretations that provides the key to understanding where stubborn distributivity comes from in the first place: contextual predictability.
+Given the prohibition on plural subjects in their basic denotations, stubbornly distributive predicates simply cannot deliver collective interpretations. At the very least, the results of our experiments demonstrate that stubborn distributivity should not (indeed, cannot) manifest in terms of an all-out prohibition against collective interpretations. However, even unabashedly stubbornly distributive predicates like \emph{big} yield greater rates of collective interpretations when context supports them; we claim it is the way that context supports collective interpretations that provides the key to understanding where stubborn distributivity comes from in the first place: contextual predictability.
 
-Complaisantly collective predicates like \emph{heavy} or \emph{expensive} do not require support from context to ensure that their collective properties are predictable. The properties of collective weight and price are inherently stable in context; there exists but one way to evaluate these properties, and they persist despite changing physical arrangement, speaker perspective, etc. Not so for the collective properties named by stubbornly distributive predicates like \emph{big} or \emph{tall}, which name properties of physical extent. Owing to uncertainty in evaluation strategy, compounded by definitional dependence on physical arrangement, these collective properties are relatively unpredictable, unstable, and as a result difficult for speakers and listeners to coordinate on in the absence of additional contextual or linguistic cues. Grammar might encode stubborn distributivity as a preference against plural arguments for certain predicates (or as a preference for plural arguments with fixed physical arrangements), but here we suggest a lower level explanation for this preference: stubbornly distributive predicates name collective properties that are difficult to accurately communicate. Increasing the contextual predictability of these properties decreases this difficulty and thereby increases the utility and likelihood of collective interpretations.
+Complaisantly collective predicates like \emph{heavy} or \emph{expensive} do not require support from context to ensure that their collective properties are predictable. The properties of collective weight and price are inherently stable in context; there exists but one way to evaluate these properties, and they persist despite changing physical arrangement, speaker perspective, etc. Not so for the collective properties named by stubbornly distributive predicates like \emph{big} or \emph{tall}, which name properties of physical extent. Owing to uncertainty in evaluation strategy, compounded by definitional dependence on physical arrangement, these collective properties are relatively unpredictable, unstable, and as a result difficult for speakers and listeners to coordinate on in the absence of additional contextual or linguistic cues. Grammar might encode stubborn distributivity as a preference against plural arguments for certain predicates (or as a preference for plural arguments with fixed physical arrangements), but here we suggest a simpler explanation for this preference: stubbornly distributive predicates name collective properties that are difficult to accurately communicate. Increasing the contextual predictability of these properties decreases this difficulty and thereby increases the utility and likelihood of collective interpretations.
 
 Further evidence for the non-trivial role of contextual predictability in collective predication comes from data demonstrating that one and the same predicate receives varying rates of collective interpretations depending on the noun that serves as its subject. Looking at naturally-occurring examples of plural predication, we identified the most frequent subject nouns for the stubbornly distributive predicates \emph{big} and \emph{small} in a plural predication sentence frame. These predicates generally resisted collective interpretations, as we would expect if they were stubbornly distributive, but certain subject nouns yielded greater rates of collective interpretations. Crucially, these seemed to be subject nouns that suggested relatively specific collective properties. 
 Again, contextual predictability of the collective property determines availability of collective interpretations.
