updates to model section and abstract

--- a/writing/Cubert/greg.bib
+++ b/writing/Cubert/greg.bib
@@ -2,12 +2,24 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Greg Scontras at 2015-10-13 10:44:35 -0700 
+%% Created for Greg Scontras at 2015-10-19 10:22:54 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@incollection{goodmanetal2015concepts,
+	Address = {Cambridge, MA},
+	Author = {Noah D. Goodman and Joshua B. Tenenbaum and Tobias Gerstenberg},
+	Booktitle = {The Conceptual Mind: New Directions in the Study of Concepts},
+	Date-Added = {2015-10-19 17:22:53 +0000},
+	Date-Modified = {2015-10-19 17:22:53 +0000},
+	Editor = {Eric Margolis and Stephen Laurence},
+	Pages = {623-654},
+	Publisher = {{MIT} Press},
+	Title = {Concepts in a probabilistic language of thought},
+	Year = {2015}}
 
 @incollection{goodmanlassiter2015,
 	Author = {Noah D. Goodman and Daniel Lassiter},
