--- a/writing/Cubert/Cubert manuscript.v4.tex
+++ b/writing/Cubert/Cubert manuscript.v4.tex
@@ -144,14 +144,14 @@
 
 \begin{abstract}
 %% Text of abstract
-\ndg{needs another pass}
-Plural predication (e.g.~``the boxes are heavy'') is very common in everyday language, but is ambiguous between distributive and collective interpretations (the boxes each are heavy vs.~the boxes together are heavy).
+\ndg{needs another pass} \gcs{gave it another pass}
+Plural predications (e.g., ``the boxes are heavy'') are common sources of ambiguity in everyday language, allowing both distributive and collective interpretations (e.g., the boxes each are heavy vs.~the boxes together are heavy).
 This paper investigates the role of context in the disambiguation of plural predications.  
 We address the key phenomenon of ``stubborn distributivity,'' whereby certain predicates (e.g., \emph{big}, \emph{tall}) are claimed to lack collective interpretations altogether. 
 We first validate a new methodology for measuring the interpretation of plural predications.
-Using this method, we analyze naturally occurring plural predications. We find a role of context, but no evidence of a distinct class of predicates that resists collective interpretation.
-We further explore the role of context in a final experiment, showing that both the predictability of properties and the knowledgability of the speaker affect disambiguation.
-This suggests a pragmatic account of how ambiguous plural predications are interpreted. 
+Using this method, we then analyze naturally-occurring plural predications from corpora. We find a role of context, but no evidence of a distinct class of predicates that resists collective interpretations.
+We further explore the role of context in our final experiment, showing that both the predictability of properties and the knowledgeability of the speaker affect disambiguation.
+This suggests a pragmatic account of how ambiguous plural predications get interpreted. 
 In particular, stubbornly distributive predicates are so because the collective properties they name are unpredictable, or unstable, in most contexts; this unpredictability results in a noisy collective interpretation, something speakers and listeners recognize as ineffective for communicating efficiently about their world.
 We formalize the pragmatics of utterance disambiguation within the Bayesian Rational Speech-Acts framework.\\ 
 %, showing how stubborn distributivity emerges from properties of context and the reasoning processes of speakers and listeners: speakers prefer more stable, more potentially informative utterances; listeners understand speakers’ preferences and use this understanding as they interpret utterances.\\
@@ -451,7 +451,7 @@ To evaluate the behavior of the predicates in the absence of the disambiguating 
 \begin{figure}[h]
 	\centering
 	\includegraphics[width=\linewidth]{plots/expt1bootsci.eps}
-	\vspace{-15pt}
+	\vspace{-20pt}
 	\caption{Proportion of collective choices in the results of Expt.~1.}\label{results2}
 \end{figure}
 
@@ -768,7 +768,7 @@ We will base our analysis on the Rational Speech-Acts (RSA) approach \citep{fran
 In several recent RSA models, the pragmatic listener is extended to reason over factors needed to fully fix meaning, in addition to the situation itself. 
 That is, some aspect of the literal interpretation model is ``lifted'' into the inference performed by the pragmatic reasoner.
 %In recent models, conversational participants reason not merely over utterances and meanings, but also over variables that contribute to those meanings. 
-This sort of lifted variable RSA model has proven useful in accounts of gradable adjective semantics (where the lifted variable is the adjective's degree threshold; \citealp{lassitergoodman2013}), specificity implicatures (where the lifted variable determines the choice of lexica; \citealp{bergenetal2012}), and non-literal meaning (where the lifted variable concerns the dimension along which the speaker intends to communicate, or the question under discussion; \citealp{kaoetal2014}); see also \citealp{goodmanlassiter2015} for an overview. Our model treats the two underlying senses (collective and distributive) as vague expressions that have an underspecified threshold semantics---following \citealp{lassitergoodman2013}, we lift the corresponding threshold variables to be resolved by the pragmatic listener.
+This sort of lifted variable RSA model has proven useful in accounts of gradable adjective semantics (where the lifted variable is the adjective's degree threshold; \citealp{lassitergoodman2013}), specificity implicatures (where the lifted variable determines the choice of lexica; \citealp{bergenetal2012}), and non-literal meaning (where the lifted variable concerns the dimension along which the speaker intends to communicate, or the question under discussion; \citealp{kaoetal2014}); see also \citealp{goodmanlassiter2015}, for an overview. Our model treats the two underlying senses (collective and distributive) as vague expressions that have an underspecified threshold semantics---following \citealp{lassitergoodman2013}, we lift the corresponding threshold variables to be resolved by the pragmatic listener.
 
 From \citealp{goodmanstuhlmuller2013}, we borrow a treatment of the speaker's knowledge. The speaker has a basic motivation to inform the listener about the true state of the world; he accounts for his uncertainty about this true state by choosing an utterance according to the \emph{expected informativity} given his belief distribution. The pragmatic listener knows this, but does not know what private observations the speaker has had---she takes this uncertainty into account when evaluating an utterance.
 
@@ -947,11 +947,11 @@ The plural predication is both ambiguous ($v$) and vague ($\theta_{c}$, $\theta_
 
 To generate predictions, we need to fix various parameter settings within the model; we aim to make the simplest choices possible, focussing on qualitative predictions.\footnote{The full model is viewable online at \url{http://forestdb.org/models/plural-predication.html}. \ndg{note: update code to most clearly reflect final model description.}}
 %Here we fill in more details of these settings, with the caveat that the qualitative model results presented below are robust to a broad range of parameter settings; the specific values we give here are used merely to demonstrate the general behavior and success of the model.\footnote{XXX specifics about the range of parameter settings that are possible, and the settings that are not.\label{parameter}}
-Each state, $s$, consists of two objects, each of which has degree $3$ or $4$. The prior on states $P(s)$ was taken to be uniform. The distributive threshold $\theta_d$ was uniformly $3$ or $4$ (the two possible object degrees). The collective threshold $\theta_c$ was uniformly drawn from the possible total degrees, $\{6,7,8\}$. \ndg{should really be uniform, not state prior.}
+Each state, $s$, consists of three objects, each of which has degree $3$ or $4$. The prior on states $P(s)$ was taken to be uniform. The distributive threshold $\theta_d$ was uniformly $3$ or $4$ (the two possible object degrees). The collective threshold $\theta_c$ was uniformly drawn from the possible total degrees, $\{9,10,11,12\}$. %\ndg{should really be uniform, not state prior.}
 %ranged over state degrees (i.e., 6, 7 8), and was drawn uniformly from the state prior.
 %The priors on state $P(s)$ and on thresholds $P(\theta_d,\theta_c)$ are taken to be uniform. \ndg{check}
-We take $P(v)$ to be Bernoulli with a single free parameter (i.e., the prior bias toward collective interpretations); this parameter was set to $0.9$ based on our experimental data.
-We take the cost $C(u)$ to be $1$ for the ambiguous utterance and $2$ for both of the unambiguous utterances---a reasonable assumption from the point of view of production, given that unambiguous utterances contain an extra word (i.e., \emph{each} or \emph{together}). The parameter $\alpha > 0$ controls the speaker's optimality; we fit $\alpha$ to $10$ based on our experimental data.
+We take $P(v)$ to be Bernoulli with a single free parameter (i.e., the prior bias toward collective interpretations); this parameter was set to $0.8$. \gcs{okay to simply ``set'' the parameter?}
+We take the cost $C(u)$ to be $1$ for the ambiguous utterance and $2$ for both of the unambiguous utterances---a reasonable assumption from the point of view of production, given that unambiguous utterances contain an extra word (i.e., \emph{each} or \emph{together}). The parameter $\alpha > 0$ controls the speaker's optimality; we set $\alpha$ to $7$. \gcs{okay to ``set'' alpha?}
 Importantly, the qualitative patterns reported below are robust to changes in these parameters and assumptions.
 
 %\ndg{what about alpha?}
@@ -969,7 +969,7 @@ Importantly, the qualitative patterns reported below are robust to changes in th
 %In our box setting, this semantics captures the fact that the distributive interpretation of a gradable predicate is true of a plurality when each of its members exceeds a contextually-determined cutoff \citep{kennedy1999,lassitergoodman2013}. The \texttt{collective-interpretation} is true of a state $s$ just in case the sum of that state---the plurality taken together---exceeds some collective threshold. Here we capture the sum-based aggregation inherent to collective interpretations of gradable predicates \citep{scha1984}. 
 %So far, no deviation from the formal semantics tradition.
 
-Our central claim surrounds the effect of $P(c)$, which controls the predictability of the collective interpretation. To evaluate its role, we generated model predictions for distributions of varying entropy; $c$ was drawn from a normal distribution centered around $0$. The variance of this distribution controls the amount of collective interpretation noise. We begin by the comparing effects of \texttt{no} ($\sigma=0.02$), \texttt{low} ($\sigma=1$), \texttt{mid} ($\sigma=2$), and \texttt{high} ($\sigma=3$) collective noise.
+Our central claim surrounds the effect of $P(c)$, which controls the predictability of the collective interpretation. To evaluate its role, we generated model predictions for distributions of varying entropy; $c$ was drawn from a normal distribution centered around $0$. The variance of this distribution controls the amount of collective interpretation noise. We begin by the comparing effects of \texttt{no} ($\sigma=0.01$), \texttt{low} ($\sigma=0.75$), \texttt{mid} ($\sigma=1.00$), and \texttt{high} ($\sigma=1.25$) collective noise.
 %
 %What sets this semantics apart is the contextual noise parameter $c$ in the \texttt{collective}-\texttt{interpretation}, a scalar multiplier of the set aggregate estimate that determines contextual predictability. 
 %%This parameter explicitly represents possible noise in the determination of, say, collective size. In other words, this parameter models the contextual predictability of a collective property, or the possibility that speakers and listeners will arrive at different truth values for a collective interpretation. For our purposes, lower noise (i.e., values closer to 1) corresponds to increased contextual predictability of the collective property. 
@@ -986,9 +986,9 @@ In Fig.~\ref{modelresults}, we plot the probability that the interpretation-reso
 %	\caption{Contextual noise priors used to evaluate the qualitative predictions of the plural predication model.} \label{noises}
 %\end{figure}
 
-\begin{figure}[h]
+\begin{figure}[htb!]
 	\centering
-	\includegraphics[width=\linewidth]{plots/model-results-add.eps}
+	\includegraphics[width=\linewidth]{plots/model-results-sum.eps}
 	\vspace{-20pt}
 	\caption{Model predictions for the probability of the \texttt{ambiguous} utterance receiving a collective interpretation as a function of collective interpretation noise and speaker knowledge access.  
 		%\ndg{todo: regenerate this figure using parameters fit to data. also change access label to "sum" from "partial".}  
@@ -1014,7 +1014,7 @@ In Fig.~\ref{modelresults}, we plot the probability that the interpretation-reso
 The qualitative predictions of our plural predication model match the hypotheses and experimental results that motivated the model. Most striking is the monotonic decrease in probability of collective interpretations as collective noise increases (red bars in  Fig.~\ref{modelresults}). We now have a formal understanding as to why this effect holds: the noisier the collective interpretation, the less likely the listener $L_{0}$ is to correctly resolve the question under discussion, namely the properties of the named boxes $s$. Given that the speaker $S_{1}$'s goal is to successfully communicate $s$ to $L_{0}$, the noisier an interpretation, the less useful it is at achieving this goal; the speaker is therefore less likely to intend this interpretation, and as a result the pragmatic listener $L_{1}$ is less likely to infer it.
 
 The model also successfully predicts the qualitative increase in the probability of a collective interpretation when the speaker's  access to individual object properties is limited (blue vs.~red bars in  Fig.~\ref{modelresults}). %With only partial access to the actual state $s$, $S_{1}$ is less likely to have precise information concerning $s$ about which to communicate. 
-$L_{1}$ tracks  $S_{1}$'s epistemic state, and therefore knows whether the speaker has full or partial knowledge. In the case of partial knowledge, a distributive interpretation lacks epistemic support, and therefore becomes less likely; as a result, collective interpretations become more likely.
+$L_{1}$ tracks  $S_{1}$'s epistemic state, and therefore knows whether the speaker has full or partial knowledge. In the case of partial (i.e., sum)  knowledge, a distributive interpretation lacks epistemic support, and therefore becomes less likely; as a result, collective interpretations become more likely.
 
 %We have verified the qualitative predictions of our account of plural predication: increasing the contextual predictability of collective properties (by decreasing contextual noise) increases the probability of collective interpretations; and, regardless of the amount of contextual noise, removing support for a distributive interpretation (by limiting the speaker's access to individual properties) decreases the probability of a distributive interpretation and thus increases the probability of a collective interpretation. Crucially, both of these qualitative predictions are borne out while making minimal assumptions concerning model parameters. Next, we fit these parameters to the human data collected in Expt.~3 to test both qualitative and \emph{quantitative} predictions of the model.
 
@@ -1025,14 +1025,20 @@ $L_{1}$ tracks  $S_{1}$'s epistemic state, and therefore knows whether the speak
 
 %\ndg{i don't get the next two paragraphs: we're not doing any collapsing here now, right? shouldn't this just read something like ``we fit the variance of $P(c)$ for each predicate and each arrangement condition, we additionally assume total-only knowledge for heavy in move conditions but not other cases. the best fit variance values are blah. the results are compared to expt 3 collective endorsements in fig blah. we see blah.''??}
 
-To compare our model to the data from Expt.~3, we fit the variance of $P(c)$ for each predicate and each arrangement condition (i.e., \texttt{regular} vs.~\texttt{random}). For \emph{heavy} in the ``move'' condition, we assume access to knowledge of only the sum of weights (not the individual weights); full knowledge is assumed for other predicates.
-sum-only knowledge for \emph{heavy} in ``move'' conditions, but not other cases. The best fit variance values are as follows: \emph{heavy} \texttt{regular}/\texttt{random}: $\sigma=0.7$; \emph{big}/\emph{tall} \texttt{random}: $\sigma=3$; \emph{big} \texttt{regular}: $\sigma=1$; \emph{tall} \texttt{regular}: $\sigma=0.1$. 
-\ndg{how are these fit? there are suspicious coincidences if they are actually fully fit.} 
-\ndg{note the model is way over-parametrized to the data.... we should re-think what we claim.}
-The model predictions are compared to collective endorsement ratings from Expt.~3 in Fig.~\ref{fit-model}. \gcs{TBD: utterance cost differences}
-We see a good match between model and data.
-This suggests that our formal approach is indeed able to predict the pattern of data observed (and this qualitative pattern holds for a range of parameter settings). 
-Of course with so many free parameters we would not want to claim that the model uniquely, quantitatively predicts the data: future work will need to experimentally measure the appropriate noise values and do parametric manipulations of the conditions.
+To compare the quantitative predictions of our model with the results of Expt.~3, we would need to fit the variance of $P(c)$ for each predicate and each arrangement condition (i.e., each of the red bars in  Fig.~\ref{resultsexpt2}). But with only 12 data points by which to fit these 12 parameters,  %For \emph{heavy} in the ``move'' condition, we assume access to knowledge of only the sum of weights (not the individual weights); full knowledge is assumed for other predicates.
+%sum-only knowledge for \emph{heavy} in ``move'' conditions, but not other cases.
+%With 
+%With so many free parameters 
+we would not want to claim that the model uniquely, quantitatively predicts the data. Future work will need to experimentally measure the appropriate noise values and do parametric manipulations of the conditions.
+
+%To compare our model to the data from Expt.~3, we fit the variance of $P(c)$ for each predicate and each arrangement condition (i.e., \texttt{regular} vs.~\texttt{random}). For \emph{heavy} in the ``move'' condition, we assume access to knowledge of only the sum of weights (not the individual weights); full knowledge is assumed for other predicates.
+%sum-only knowledge for \emph{heavy} in ``move'' conditions, but not other cases. The best fit variance values are as follows: \emph{heavy} \texttt{regular}/\texttt{random}: $\sigma=0.7$; \emph{big}/\emph{tall} \texttt{random}: $\sigma=3$; \emph{big} \texttt{regular}: $\sigma=1$; \emph{tall} \texttt{regular}: $\sigma=0.1$. 
+%\ndg{how are these fit? there are suspicious coincidences if they are actually fully fit.} 
+%\ndg{note the model is way over-parametrized to the data.... we should re-think what we claim.}
+%The model predictions are compared to collective endorsement ratings from Expt.~3 in Fig.~\ref{fit-model}. \gcs{TBD: utterance cost differences}
+%We see a good match between model and data.
+%This suggests that our formal approach is indeed able to predict the pattern of data observed (and this qualitative pattern holds for a range of parameter settings). 
+
 
 %In addition to the match between the qualitative predictions of our model and the human data from Expt.~3, fitting predicate-specific parameters for contextual noise yields near exact \emph{quantitative} predictions as well. Put simply, our model of plural predication, which explicates the ways that speakers and listeners reason about each other as they communicate, succeeds. 
 %%Collective interpretations become more likely as the properties they name become more predictable in context.
@@ -1041,12 +1047,12 @@ Of course with so many free parameters we would not want to claim that the model
 %To quantitatively evaluate the role of speaker knowledge, we collapse over the contextual predictability manipulation and look only at judgments for plural predications with \emph{heavy} (the knowledge manipulation had no measurable affect on \emph{tall} or \emph{big}). %Here we fit only the specific values for noise in the model; all other parameters remain unchanged. 
 %With \emph{heavy}-specific values for $P(c)$ ($\sigma=0.7$; all other parameters remain unchanged) we generate the model predictions in Fig.~\ref{fit-model}, plotted with average collective endorsement ratings for \emph{heavy} from Expt.~3. By simply assuming that the collective interpretations of \emph{heavy} have \emph{heavy}-specific values for noise in context, we achieve a near exact fit between the model and the human data it predicts.
 
-\begin{figure}[h]
-	\centering
-	\includegraphics[width=\linewidth]{plots/model_all_new.eps}
-	\vspace{-20pt}
-	\caption{Fitted model predictions and human data from Expt.~3 for collective interpretations (cf.~Fig.~\ref{resultsexpt2}). For \emph{heavy}, the scenario manipulation (i.e., ``inspect'' vs.~``move'') is modeled by speaker's perceptual access to knowledge of the state (``full'' vs.~``sum''). For \emph{big} and \emph{tall}, variability of context (i.e., ``random'' vs.~``regular'') is modeled by amount of collective interpretation noise $P(c)$.} \label{fit-model}
-\end{figure}
+%\begin{figure}[h]
+%	\centering
+%	\includegraphics[width=\linewidth]{plots/model_all_new.eps}
+%	\vspace{-20pt}
+%	\caption{Fitted model predictions and human data from Expt.~3 for collective interpretations (cf.~Fig.~\ref{resultsexpt2}). For \emph{heavy}, the scenario manipulation (i.e., ``inspect'' vs.~``move'') is modeled by speaker's perceptual access to knowledge of the state (``full'' vs.~``sum''). For \emph{big} and \emph{tall}, variability of context (i.e., ``random'' vs.~``regular'') is modeled by amount of collective interpretation noise $P(c)$.} \label{fit-model}
+%\end{figure}
 
 %To qualitatively evaluate the role of contextual predictability for \emph{big} and \emph{tall}, we again have the model predict collective endorsement, this time collapsing over the scenario manipulation. As with \emph{heavy}, we fit predicate-specific values for $P(c)$; to model the effect of our contextual manipulation, we increased contextual noise in random contexts .  We also increased the cost of the unambiguous utterances to $3$ (cf.~the cost of $2$ for the results reported above). \ndg{why do we need the costs to vary in this section at all?} With no other changes to model parameters, we generate the predictions plotted in Fig.~\ref{fit-model}; once again, the fit is near perfect.
 %
@@ -1115,7 +1121,7 @@ To understand this mechanism, namely how contextual predictability affects the c
 
 Our explanation for stubborn distributivity relies on a sophisticated process of recursive reasoning involving listeners and speakers. 
 %Speakers choose utterances to efficiently and accurately resolve some question under discussion, reasoning about how a naive listener would interpret their utterance and weighing its relative cost. Listeners know this, and interpret the utterance they receive with this intuitive theory of speakers in mind. That is, listeners reason about speakers reasoning about listeners. 
-Thanks to recent advances in computational cognitive science (in our case, simulation-based probabilistic programs \ndg{cite something}), we are able to move beyond simply describing this reasoning process by implementing a formal pragmatic model that makes quantitative predictions. 
+Thanks to recent advances in computational cognitive science (in our case, simulation-based probabilistic programs; \citealp{goodmanetal2015concepts}), we are able to move beyond simply describing this reasoning process by implementing a formal pragmatic model that makes quantitative predictions. 
 %Our modeling approach has allowed for the specification and testing of hypotheses situated at the interface between semantics and pragmatics: how utterance semantics interacts with properties of context---both linguistic and more broadly construed---to resolve the intended interpretation of potentially ambiguous utterances. 
 By considering utterance semantics within an articulated model of pragmatics, what began as a description of the phenomenon---certain predicates resist collective interpretations---now has an explanation: speakers avoid interpretations that are unlikely to correctly resolve the question under discussion (e.g., collective interpretations of stubbornly distributive predicates), and listeners know this about speakers, so they avoid inferring interpretations that speakers avoid using.
 
